add methods for gallery tags
